--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-timeline",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "After Effects style Timeline",
   "main": "Timeline.js",
   "files": [
@@ -13,6 +13,9 @@
     "Timer.js",
     "Timeline.js"
   ],
+  "devDependencies": {
+    "apollo-utils": "^1.1.4",
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
