--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-timeline",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "After Effects style Timeline",
   "main": "Timeline.js",
   "files": [
@@ -14,7 +14,7 @@
     "Timeline.js"
   ],
   "devDependencies": {
-    "apollo-utils": "^1.1.4",
+    "apollo-utils": "^1.1.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
