--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-timeline",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "After Effects style Timeline",
   "main": "Timeline.js",
   "files": [
@@ -11,10 +11,12 @@
     "Keyframe.js",
     "Marker.js",
     "Timer.js",
-    "Timeline.js"
+    "Timeline.js",
+    "Layer.js",
+    "Composition.js"
   ],
   "devDependencies": {
-    "apollo-utils": "^1.1.4"
+    "apollo-utils": "^1.1.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
