--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 .DS_Store
 .sass-cache
-/examples/PIXI/node_modules
-/examples/aeProject/Adobe After Effects Auto-Save
+Adobe After Effects Auto-Save
+node_modules
