--- a/package.json
+++ b/package.json
@@ -1,26 +1,14 @@
 {
   "name": "apollo-timeline",
-  "version": "1.1.5",
+  "version": "1.1.7",
   "description": "After Effects style Timeline",
-  "main": "Timeline.js",
+  "main": "dist/timeline.min.js",
   "files": [
     "package.json",
     "LICENSE",
     "README.md",
-    "Bezier.js",
-    "Keyframe.js",
-    "Marker.js",
-    "Timer.js",
-    "Timeline.js",
-    "Layer.js",
-    "Composition.js"
+    "dist/timeline.min.js"
   ],
-  "devDependencies": {
-    "apollo-utils": "^1.1.7"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/tomorrowevening/Apollo-Timeline"
@@ -33,5 +21,14 @@
   "author": "Colin Duffy",
   "license": "Apache-2.0",
   "homepage": "https://github.com/tomorrowevening/Apollo-Timeline",
-  "devDependencies": {}
+  "devDependencies": {
+    "apollo-utils": "^1.1.87",
+    "babel": "^6.3.26",
+    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-preset-latest": "^6.22.0",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-uglify": "^1.4.1"
+  }
 }
