all files included, added build process

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-timeline",
-  "version": "1.1.9",
+  "version": "1.2.0",
   "description": "After Effects style Timeline",
   "main": "dist/timeline.min.js",
   "files": [
@@ -11,28 +11,28 @@
     "dist/timeline.all.min.js",
     "dist/timeline.dom.min.js",
     "dist/timeline.three.min.js",
-    "src/timeline/Bezier.js",
-    "src/timeline/Marker.js",
-    "src/timeline/Timer.js",
-    "src/timeline/Keyframe.js",
-    "src/timeline/Layer.js",
-    "src/timeline/LayerAudio.js",
-    "src/timeline/LayerImage.js",
-    "src/timeline/LayerShape.js",
-    "src/timeline/LayerText.js",
-    "src/timeline/LayerVideo.js",
-    "src/timeline/Timeline.js",
-    "src/timeline/Composition.j",
-    "src/dom/SVGUtil.js",
-    "src/dom/SVGItem.js",
-    "src/three/EffectComposer.js",
-    "src/three/THREEConfig.js",
-    "src/three/THREEFBO.js",
-    "src/three/THREELayer.js",
-    "src/three/THREEImage.js",
-    "src/three/THREEShape.js",
-    "src/three/THREEText.js",
-    "src/three/THREEVideo.js"
+    "dist/timeline/Bezier.js",
+    "dist/timeline/Marker.js",
+    "dist/timeline/Timer.js",
+    "dist/timeline/Keyframe.js",
+    "dist/timeline/Layer.js",
+    "dist/timeline/LayerAudio.js",
+    "dist/timeline/LayerImage.js",
+    "dist/timeline/LayerShape.js",
+    "dist/timeline/LayerText.js",
+    "dist/timeline/LayerVideo.js",
+    "dist/timeline/Timeline.js",
+    "dist/timeline/Composition.j",
+    "dist/dom/SVGUtil.js",
+    "dist/dom/SVGItem.js",
+    "dist/three/EffectComposer.js",
+    "dist/three/THREEConfig.js",
+    "dist/three/THREEFBO.js",
+    "dist/three/THREELayer.js",
+    "dist/three/THREEImage.js",
+    "dist/three/THREEShape.js",
+    "dist/three/THREEText.js",
+    "dist/three/THREEVideo.js"
   ],
   "repository": {
     "type": "git",
@@ -52,11 +52,13 @@
     "babel-plugin-glslify": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-preset-latest": "^6.22.0",
+    "babel-preset-stage-1": "^6.24.1",
     "glslify": "^6.0.1",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-concat": "^2.6.1",
     "gulp-uglify": "^1.4.1",
+    "gulp-util": "^3.0.8",
     "polyline-normals": "^2.0.2",
     "three": "^0.83.0",
     "three-line-2d": "^1.1.6",
