--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-timeline",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "After Effects style Timeline",
   "main": "dist/timeline.min.js",
   "files": [
@@ -11,28 +11,28 @@
     "dist/timeline.all.min.js",
     "dist/timeline.dom.min.js",
     "dist/timeline.three.min.js",
-    "dist/timeline/Bezier.js",
-    "dist/timeline/Marker.js",
-    "dist/timeline/Timer.js",
-    "dist/timeline/Keyframe.js",
-    "dist/timeline/Layer.js",
-    "dist/timeline/LayerAudio.js",
-    "dist/timeline/LayerImage.js",
-    "dist/timeline/LayerShape.js",
-    "dist/timeline/LayerText.js",
-    "dist/timeline/LayerVideo.js",
-    "dist/timeline/Timeline.js",
-    "dist/timeline/Composition.j",
-    "dist/dom/SVGUtil.js",
-    "dist/dom/SVGItem.js",
-    "dist/three/EffectComposer.js",
-    "dist/three/THREEConfig.js",
-    "dist/three/THREEFBO.js",
-    "dist/three/THREELayer.js",
-    "dist/three/THREEImage.js",
-    "dist/three/THREEShape.js",
-    "dist/three/THREEText.js",
-    "dist/three/THREEVideo.js"
+    "dist/Bezier.js",
+    "dist/Marker.js",
+    "dist/Timer.js",
+    "dist/Keyframe.js",
+    "dist/Layer.js",
+    "dist/LayerAudio.js",
+    "dist/LayerImage.js",
+    "dist/LayerShape.js",
+    "dist/LayerText.js",
+    "dist/LayerVideo.js",
+    "dist/Timeline.js",
+    "dist/Composition.j",
+    "dist/SVGUtil.js",
+    "dist/SVGItem.js",
+    "dist/EffectComposer.js",
+    "dist/THREEConfig.js",
+    "dist/THREEFBO.js",
+    "dist/THREELayer.js",
+    "dist/THREEImage.js",
+    "dist/THREEShape.js",
+    "dist/THREEText.js",
+    "dist/THREEVideo.js"
   ],
   "repository": {
     "type": "git",
