es6 update + changes from apollo-utils updates

--- a/package.json
+++ b/package.json
@@ -1,38 +1,33 @@
 {
   "name": "apollo-timeline",
-  "version": "1.2.2",
+  "version": "1.2.21",
   "description": "After Effects style Timeline",
-  "main": "dist/timeline.min.js",
   "files": [
     "package.json",
     "LICENSE",
     "README.md",
-    "dist/timeline.min.js",
-    "dist/timeline.all.min.js",
-    "dist/timeline.dom.min.js",
-    "dist/timeline.three.min.js",
-    "dist/Bezier.js",
-    "dist/Marker.js",
-    "dist/Timer.js",
-    "dist/Keyframe.js",
-    "dist/Layer.js",
-    "dist/LayerAudio.js",
-    "dist/LayerImage.js",
-    "dist/LayerShape.js",
-    "dist/LayerText.js",
-    "dist/LayerVideo.js",
-    "dist/Timeline.js",
-    "dist/Composition.j",
-    "dist/SVGUtil.js",
-    "dist/SVGItem.js",
-    "dist/EffectComposer.js",
-    "dist/THREEConfig.js",
-    "dist/THREEFBO.js",
-    "dist/THREELayer.js",
-    "dist/THREEImage.js",
-    "dist/THREEShape.js",
-    "dist/THREEText.js",
-    "dist/THREEVideo.js"
+    "TimelineConfig.js",
+    "Bezier.js",
+    "Marker.js",
+    "Timer.js",
+    "Keyframe.js",
+    "Layer.js",
+    "LayerAudio.js",
+    "LayerImage.js",
+    "LayerShape.js",
+    "LayerText.js",
+    "LayerVideo.js",
+    "Timeline.js",
+    "Composition.js",
+    "dom/SVGItem.js",
+    "three/EffectComposer.js",
+    "three/THREEConfig.js",
+    "three/THREEFBO.js",
+    "three/THREELayer.js",
+    "three/THREEImage.js",
+    "three/THREEShape.js",
+    "three/THREEText.js",
+    "three/THREEVideo.js"
   ],
   "repository": {
     "type": "git",
@@ -47,12 +42,11 @@
   "license": "Apache-2.0",
   "homepage": "https://github.com/tomorrowevening/Apollo-Timeline",
   "devDependencies": {
-    "apollo-utils": "^1.1.87",
-    "babel": "^6.3.26",
+    "apollo-utils": "^",
+    "babel-cli": "^6.24.1",
+    "babel-polyfill": "^6.23.0",
     "babel-plugin-glslify": "^2.0.0",
-    "babel-plugin-transform-class-properties": "^6.23.0",
-    "babel-preset-latest": "^6.22.0",
-    "babel-preset-stage-1": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "glslify": "^6.0.1",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
