--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-timeline",
-  "version": "1.2.22",
+  "version": "1.2.23",
   "description": "After Effects style Timeline",
   "files": [
     "package.json",
@@ -8,7 +8,6 @@
     "README.md",
     "TimelineConfig.js",
     "Marker.js",
-    "Timer.js",
     "Keyframe.js",
     "Layer.js",
     "LayerAudio.js",
@@ -41,7 +40,7 @@
   "license": "Apache-2.0",
   "homepage": "https://github.com/tomorrowevening/Apollo-Timeline",
   "devDependencies": {
-    "apollo-utils": "^",
+    "apollo-utils": "^1.2.09",
     "babel-cli": "^6.24.1",
     "babel-polyfill": "^6.23.0",
     "babel-plugin-glslify": "^2.0.0",
