--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-timeline",
-  "version": "1.2.24",
+  "version": "1.2.25",
   "description": "After Effects style Timeline",
   "files": [
     "package.json",
@@ -44,6 +44,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-plugin-glslify": "^2.0.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "glslify": "^6.0.1",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
