--- a/package.json
+++ b/package.json
@@ -6,32 +6,32 @@
     "package.json",
     "LICENSE",
     "README.md",
-    "TimelineConfig.js",
-    "Marker.js",
-    "Keyframe.js",
-    "ArrayKeyframe.js",
-    "Layer.js",
-    "LayerAudio.js",
-    "LayerImage.js",
-    "LayerShape.js",
-    "LayerText.js",
-    "LayerVideo.js",
-    "Timeline.js",
-    "Composition.js",
-    "dom/SVGItem.js",
-    "three/EffectComposer.js",
-    "three/THREEPost.js",
-    "three/THREEComposition.js",
-    "three/THREELayer.js",
-    "three/THREEImage.js",
-    "three/THREELineGeometry.js",
-    "three/THREEShape.js",
-    "three/materials/StrokeMaterial.js",
-    "three/passes/FXAAPass.js",
-    "three/passes/BlurPass.js",
-    "three/passes/TrackMattePass.js",
-    "three/THREEText.js",
-    "three/THREEVideo.js"
+    "dist/TimelineConfig.js",
+    "dist/Marker.js",
+    "dist/Keyframe.js",
+    "dist/ArrayKeyframe.js",
+    "dist/Layer.js",
+    "dist/LayerAudio.js",
+    "dist/LayerImage.js",
+    "dist/LayerShape.js",
+    "dist/LayerText.js",
+    "dist/LayerVideo.js",
+    "dist/Timeline.js",
+    "dist/Composition.js",
+    "dist/dom/SVGItem.js",
+    "dist/three/EffectComposer.js",
+    "dist/three/THREEPost.js",
+    "dist/three/THREEComposition.js",
+    "dist/three/THREELayer.js",
+    "dist/three/THREEImage.js",
+    "dist/three/THREELineGeometry.js",
+    "dist/three/THREEShape.js",
+    "dist/three/materials/StrokeMaterial.js",
+    "dist/three/passes/FXAAPass.js",
+    "dist/three/passes/BlurPass.js",
+    "dist/three/passes/TrackMattePass.js",
+    "dist/three/THREEText.js",
+    "dist/three/THREEVideo.js"
   ],
   "repository": {
     "type": "git",
